# linkbacks

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  README.md  dev-requirements.txt  linkbacks.py  pyproject.toml  test_linkbacks.py
.github/workflow/: continuous-integration-workflow.yml
.github/workflows/: continuous-integration-workflow.yml
pelican/plugins/linkbacks/: __init__.py  linkbacks.py  test_linkbacks.py
test_content/: dummy_article.md
