[tool.poetry]
name = "pelican-plugin-linkbacks"
version = "1.0.0"
description = "Pelican plugin implementing Linkback protocols, on the linking server side"
authors = ["Lucas Cimon <lucas.cimon@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "linkback", "pingback", "trackback", "webmention"]
repository = "https://github.com/pelican-plugins/linkbacks"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Documentation" = "https://docs.getpelican.com/"
"Funding" = "https://donate.getpelican.com/"
"Source" = "https://github.com/pelican-plugins/linkbacks"
"Tracker" = "https://github.com/pelican-plugins/linkbacks/issues"

[tool.poetry.dependencies]
python = "^3.6"
requests-futures = "^1.0.0"
ronkyuu = "^0.7"

[tool.poetry.dev-dependencies]
pelican = "^4.2"
HTTPretty = "^0.9.7"
markdown = "^3.1.1"
pylint = "^2.4.4"
pytest = "^5.3.5"

[tool.poetry.extras]
markdown = ["markdown"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
