[tool.poetry]
name = "pelican-plugin-linkbacks"
version = "1.0.4"
description = "Pelican plugin implementing Linkback protocols, on the linking server side"
authors = ["Lucas Cimon <lucas.cimon@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "linkback", "pingback", "trackback", "webmention"]
repository = "https://github.com/pelican-plugins/linkbacks"
packages = [{ include = "linkbacks.py" }]
include = ["CHANGELOG.md", "README.md"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Documentation" = "https://docs.getpelican.com/"
"Funding" = "https://donate.getpelican.com/"
"Source" = "https://github.com/pelican-plugins/linkbacks"
"Tracker" = "https://github.com/pelican-plugins/linkbacks/issues"

[tool.poetry.dependencies]
python = "^3.7.2"
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pelican = "^4.8.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.poetry.group.dev.dependencies]
markdown = "^3.4.1"
httpretty = "^1.1.4"
pylint = "^2.15.10"
pytest = "^7.2.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
